Latest Set of Updates

--- a/7thand8thgrade.html
+++ b/7thand8thgrade.html
@@ -219,7 +219,7 @@
                                     <!-- End side nav bar -->
                                     <!-- start Background image -->
                                     <div class="overall">
-                                      <img class="sectionaltcolor" style="margin-top:5%;" src="imgs/8thgrade.jpg">
+                                      <img class="sectionaltcolor" style="margin-top:5%;" src="imgs/7th8thgrade.jpg">
                                       
                                       <!-- end background image -->
                                       <!-- MODALS FOR ALL THE COACHES -->
