--- a/9and10yearold.html
+++ b/9and10yearold.html
@@ -220,8 +220,8 @@
                                     <!-- End side nav bar -->
                                     <!-- start Background image -->
                                     <div class="overall">
-                                      <img class="sectionaltcolor" style="margin-top:5%;" src="imgs/8thgrade.jpg">
-                                      
+
+                                      <img class="sectionaltcolor" style="margin-top:5%;" src="imgs/9and10maroonandwhite.jpg">
                                       <!-- end background image -->
                                       <!-- MODALS FOR ALL THE COACHES -->
                                       <div id="9and10maroonschedule" style="overflow-y:scroll" class="modal">
