--- a/schedule.html
+++ b/schedule.html
@@ -24,7 +24,73 @@
   
 </head>
 
-<body>
+<body>\
+    <div id="freshmanschedule" style="overflow-y:scroll" class="modal">
+                                                <div class="modal-content">
+                                                  <h4>Freshman Football Schedule</h4>
+                                                  <p><table style="color:black;">
+                                                    <tbody>
+                                                      <tr>
+                                                        <th>Date</th>
+                                                        <th>Time</th>
+                                                        <th>Location</th>
+                                                      </tr>
+                                                      <tr>
+                                                        <td>August 20th</td>
+                                                        <td>6:00 PM</td>
+                                                        <td>@ Arlington</td>
+                                                      </tr>
+                                                      <tr>
+                                                        <td>August 27th</td>
+                                                        <td>6:30 PM</td>
+                                                        <td>@ Covington</td>
+                                                      </tr>
+                                                      <tr>
+                                                        <td>August 30th</td>
+                                                        <td>6:00 PM</td>
+                                                        <td>vs Munford</td>
+                                                      </tr>
+                                                      <tr>
+                                                        <td>September 6th</td>
+                                                        <td>TBD</td>
+                                                        <td>TBD</td>
+                                                      </tr>
+                                                      <tr>
+                                                        <td>Septempber 10th</td>
+                                                        <td>6:00 PM</td>
+                                                        <td>vs Braircrest</td>
+                                                      </tr>
+                                                      <tr>
+                                                        <td>September 17th</td>
+                                                        <td>6:00 PM</td>
+                                                        <td>vs Cordova</td>
+                                                      </tr>
+                                                      <tr>
+                                                        <td>September 24th</td>
+                                                        <td>5:30 PM</td>
+                                                        <td>@ Houston</td>
+                                                      </tr>
+                                                      <tr>
+                                                        <td>October 1st</td>
+                                                        <td>6:00 PM</td>
+                                                        <td>vs White Station</td>
+                                                      </tr>
+                                                      <tr>
+                                                        <td>October 15th</td>
+                                                        <td>6:00 PM</td>
+                                                        <td>vs Bartlett</td>
+                                                      </tr>
+                                                    </tbody>
+                                                  </table>
+                                                    </p>
+                                          
+                                                    </p>
+                                                  </div>
+                                              <div class="modal-footer">
+                                                    <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Done</a>
+                                                  </div>
+                                                </div>
+
    <div id="varsityschedule" style="overflow-y:scroll" class="modal">
                                                 <div class="modal-content">
                                                   <h4>Varsity Football Schedule</h4>
@@ -105,7 +171,7 @@
                                                   </div>
                                                 </div>
 
-                                                    <div id="jvschedule" style="overflow-y:scroll" class="modal">
+                                                  <div id="jvschedule" style="overflow-y:scroll" class="modal">
                                                 <div class="modal-content">
                                                   <h4>JV Football Schedule</h4>
                                                   <p>
@@ -117,24 +183,24 @@
                                                         <th>Location</th>
                                                       </tr>
                                                       <tr>
+                                                        <td>August 20th</td>
+                                                        <td>6:00 PM</td>
+                                                        <td>@ Arlington (following Freshmen game)</td>
+                                                      </tr>
+                                                      <tr>
                                                         <td>August 27th</td>
                                                         <td>6:00 PM</td>
                                                         <td>vs Ridgeway</td>
                                                       </tr>
                                                       <tr>
-                                                        <td>August 30th</td>
-                                                        <td>6:00 PM</td>
-                                                        <td>vs Munford</td>
-                                                      </tr>
-                                                      <tr>
                                                         <td>Septempber 10th</td>
-                                                        <td>5:30 PM</td>
-                                                        <td>vs Braircrest</td>
+                                                        <td>6:00 PM</td>
+                                                        <td>vs Braircrest (Freshmen&Sophomore JV players ONLY)</td>
                                                       </tr>
                                                       <tr>
                                                         <td>September 17th</td>
                                                         <td>6:00 PM</td>
-                                                        <td>vs Cordova</td>
+                                                        <td>vs Cordova (following Freshmen game)</td>
                                                       </tr>
                                                       <tr>
                                                         <td>September 24th</td>
@@ -144,12 +210,14 @@
                                                       <tr>
                                                         <td>October 1st</td>
                                                         <td>6:00 PM</td>
-                                                        <td>vs White Station</td>
+                                                        <td>vs White Station (following Freshmen game)</td>
                                                       </tr>
                                                       <tr>
                                                         <td>October 15th</td>
                                                         <td>6:00 PM</td>
-                                                        <td>vs Bartlett</td>
+                                                        <td>vs Bartlett <div class="col pl-4">
+  <a style="background-color:#722D3C;" class="btn modal-trigger" href="#jvschedule"><font size="+1">JV </font><i class="fa fa-calendar fa-2x" aria-hidden="true"></i></a>
+  </div>(following Freshmen game)</td>
                                                       </tr>
                                                     </tbody>
                                                   </table>
@@ -756,6 +824,9 @@
 </div>
 <div class="col pl-4">
   <a style="background-color:#722D3C;" class="btn modal-trigger" href="#jvschedule"><font size="+1">JV </font><i class="fa fa-calendar fa-2x" aria-hidden="true"></i></a>
+  </div>
+  <div class="col pl-4">
+  <a style="background-color:#722D3C;" class="btn modal-trigger" href="#freshmanschedule"><font size="+1">Freshman </font><i class="fa fa-calendar fa-2x" aria-hidden="true"></i></a>
   </div>
 <div class="col pl-4">
    <a style="background-color:#722D3C;" class=" btn modal-trigger" href="#maroonschedule"><font size="+1">7th/8th Maroon </font><i class="fa fa-calendar fa-2x" aria-hidden="true"></i></a>
