--- a/varsity.html
+++ b/varsity.html
@@ -405,7 +405,9 @@
                                                       <tr>
                                                         <td>October 15th</td>
                                                         <td>6:00 PM</td>
-                                                        <td>vs Bartlett (following Freshmen game)</td>
+                                                        <td>vs Bartlett <div class="col pl-4">
+  <a style="background-color:#722D3C;" class="btn modal-trigger" href="#jvschedule"><font size="+1">JV </font><i class="fa fa-calendar fa-2x" aria-hidden="true"></i></a>
+  </div>(following Freshmen game)</td>
                                                       </tr>
                                                     </tbody>
                                                   </table>
