Turf Picture Update

--- a/facilities.html
+++ b/facilities.html
@@ -350,8 +350,13 @@
             </div>
          </h1>
          </div>
-         <div class="col-md-4" style="padding-top:5%;">
-            <img
+         <div class="col-md-4" style="padding-top:5%;max-width:100%;">
+            <img style="max-width:100%;" 
+               src="imgs/turf.jpg"
+               alt="New School"
+               class="video-container"
+               />
+                <img style="padding-top: 5%"
                src="imgs/schoolfront.jpg"
                alt="New School"
                class="video-container"
