--- a/schedule.html
+++ b/schedule.html
@@ -24,7 +24,8 @@
   
 </head>
 
-<body>\
+<body>
+ 
     <div id="freshmanschedule" style="overflow-y:scroll" class="modal">
                                                 <div class="modal-content">
                                                   <h4>Freshman Football Schedule</h4>
