--- a/7thand8thgrade.html
+++ b/7thand8thgrade.html
@@ -381,31 +381,29 @@
                                                       </tr>
                                                       <tr>
                                                         <tr>
-                                                        <td>September 13th</td>
+                                                        <td>September 11th</td>
                                                         <td>6:00 PM</td>
-                                                        <td>vs Lakeland</td>
+                                                        <td>vs Houston</td>
+                                                      </tr>
+                                                      <tr>
+                                                        <tr>
+                                                        <td>September 13th</td>
+                                                        <td>5:30 PM</td>
+                                                        <td>vs Briarcrest</td>
                                                       </tr>
                                                       <tr>
                                                         <td>September 20th</td>
                                                         <td>6:00 PM</td>
-                                                        <td>@ Arlington</td>
+                                                        <td>vs Arlington</td>
                                                       </tr>
-                                                      <tr>
-                                                        <td>September 27th</td>
-                                                        <td>6:00 PM</td>
-                                                        <td>@ Millington</td>
-                                                      </tr>
+                                                      
                                                       <tr>
                                                          <tr>
                                                         <td>October 4th</td>
                                                         <td>6:00 PM</td>
-                                                        <td>VS Collierville Maroon</td>
+                                                        <td>VS Houston</td>
                                                       </tr>
-                                                      <tr>
-                                                        <td>October 18th</td>
-                                                        <td>TBD</td>
-                                                        <td>Championship Games</td>
-                                                      </tr>
+                                                      
                                                     </tbody>
                                                   </table>
                                                     </p>
