--- a/schedule.html
+++ b/schedule.html
@@ -289,7 +289,7 @@
                                                 </div>
 
 
-                                                  <div id="whiteschedule" style="overflow-y:scroll" class="modal">
+                                                <div id="whiteschedule" style="overflow-y:scroll" class="modal">
                                                 <div class="modal-content">
                                                   <h4>7th/8th Grade JV Football Schedule</h4>
                                                   <p>
@@ -313,31 +313,29 @@
                                                       </tr>
                                                       <tr>
                                                         <tr>
-                                                        <td>September 13th</td>
+                                                        <td>September 11th</td>
                                                         <td>6:00 PM</td>
-                                                        <td>vs Lakeland</td>
+                                                        <td>vs Houston</td>
+                                                      </tr>
+                                                      <tr>
+                                                        <tr>
+                                                        <td>September 13th</td>
+                                                        <td>5:30 PM</td>
+                                                        <td>vs Briarcrest</td>
                                                       </tr>
                                                       <tr>
                                                         <td>September 20th</td>
                                                         <td>6:00 PM</td>
-                                                        <td>@ Arlington</td>
+                                                        <td>vs Arlington</td>
                                                       </tr>
-                                                      <tr>
-                                                        <td>September 27th</td>
-                                                        <td>6:00 PM</td>
-                                                        <td>@ Millington</td>
-                                                      </tr>
+                                                      
                                                       <tr>
                                                          <tr>
                                                         <td>October 4th</td>
                                                         <td>6:00 PM</td>
-                                                        <td>VS Collierville Maroon</td>
+                                                        <td>VS Houston</td>
                                                       </tr>
-                                                      <tr>
-                                                        <td>October 18th</td>
-                                                        <td>TBD</td>
-                                                        <td>Championship Games</td>
-                                                      </tr>
+                                                      
                                                     </tbody>
                                                   </table>
                                                     </p>
