--- a/news.html
+++ b/news.html
@@ -34,7 +34,7 @@
                         <li class="collection-item avatar">
                           <div class="row">
                             <div class="column">
-                              <img src="http://materializecss.com/images/yuna.jpg" alt="" class="circle">
+                              <img src="imgs/newdragon.png" alt="" class="circle">
                               </div>
                               <div class="column">
                                 <span class="title">
@@ -51,7 +51,7 @@
                           <li class="collection-item avatar">
                             <div class="row">
                               <div class="column">
-                                <img src="http://materializecss.com/images/yuna.jpg" alt="" class="circle">
+                                <img src="imgs/newdragon.png" alt="" class="circle">
                                 </div>
                                 <div class="column">
                                   <span class="title">
@@ -68,7 +68,7 @@
                             <li class="collection-item avatar">
                               <div class="row">
                                 <div class="column">
-                                  <img src="http://materializecss.com/images/yuna.jpg" alt="" class="circle">
+                                  <img src="imgs/newdragon.png" alt="" class="circle">
                                   </div>
                                   <div class="column">
                                     <span class="title">
@@ -86,7 +86,7 @@
                                 <li class="collection-item avatar">
                                   <div class="row">
                                     <div class="column">
-                                      <img src="http://materializecss.com/images/yuna.jpg" alt="" class="circle">
+                                      <img src="imgs/newdragon.png" alt="" class="circle">
                                       </div>
                                       <div class="column">
                                         <span class="title">
@@ -103,7 +103,7 @@
                                   <li class="collection-item avatar">
                                     <div class="row">
                                       <div class="column">
-                                        <img src="http://materializecss.com/images/yuna.jpg" alt="" class="circle">
+                                        <img src="imgs/newdragon.png" alt="" class="circle">
                                         </div>
                                         <div class="column">
                                           <span class="title">
@@ -305,6 +305,17 @@
 
 <hr class="featurette-divider">
 
+  <div class="row featurette ml-2">
+    <div class="col-md-12 order-md-2 "> 
+            <h4 class="featurette-heading order-md-2 pl-2">May 15th - Hunter Bradley Drafted</h4><p class="lead">
+            <ul class="newsstuff ml-5">
+              <li>Hunter Bradley, a former Collierville Dragon, was recently drafted by the Green Bay Packers.<br><br>#DragonsintheNFL
+                 </li>
+           <li>  <img src="imgs/huntercamp.jpg" style="max-width:400px;max-height: 200px;height:auto;width:auto;background-color: black;"></li>
+            </ul>
+           </p>
+    </div>
+  </div>
 
 <div class="row featurette ml-2">
     <div class="col-md-12 order-md-2 "> 
