--- a/seasonticket.html
+++ b/seasonticket.html
@@ -35,7 +35,7 @@
                         <li class="collection-item avatar">
                           <div class="row">
                             <div class="column">
-                              <img src="http://materializecss.com/images/yuna.jpg" alt="" class="circle">
+                              <img src="imgs/newdragon.png" alt="" class="circle">
                               </div>
                               <div class="column">
                                 <span class="title">
@@ -52,7 +52,7 @@
                           <li class="collection-item avatar">
                             <div class="row">
                               <div class="column">
-                                <img src="http://materializecss.com/images/yuna.jpg" alt="" class="circle">
+                                <img src="imgs/newdragon.png" alt="" class="circle">
                                 </div>
                                 <div class="column">
                                   <span class="title">
@@ -69,7 +69,7 @@
                             <li class="collection-item avatar">
                               <div class="row">
                                 <div class="column">
-                                  <img src="http://materializecss.com/images/yuna.jpg" alt="" class="circle">
+                                  <img src="imgs/newdragon.png" alt="" class="circle">
                                   </div>
                                   <div class="column">
                                     <span class="title">
@@ -87,7 +87,7 @@
                                 <li class="collection-item avatar">
                                   <div class="row">
                                     <div class="column">
-                                      <img src="http://materializecss.com/images/yuna.jpg" alt="" class="circle">
+                                      <img src="imgs/newdragon.png" alt="" class="circle">
                                       </div>
                                       <div class="column">
                                         <span class="title">
@@ -104,7 +104,7 @@
                                   <li class="collection-item avatar">
                                     <div class="row">
                                       <div class="column">
-                                        <img src="http://materializecss.com/images/yuna.jpg" alt="" class="circle">
+                                        <img src="imgs/newdragon.png" alt="" class="circle">
                                         </div>
                                         <div class="column">
                                           <span class="title">
