--- a/swag.html
+++ b/swag.html
@@ -34,7 +34,7 @@
          <li class="collection-item avatar">
             <div class="row">
                <div class="column">
-                  <img src="http://materializecss.com/images/yuna.jpg" alt="" class="circle">
+                  <img src="imgs/newdragon.png" alt="" class="circle">
                </div>
                <div class="column">
                   <span class="title">
@@ -51,7 +51,7 @@
          <li class="collection-item avatar">
             <div class="row">
                <div class="column">
-                  <img src="http://materializecss.com/images/yuna.jpg" alt="" class="circle">
+                  <img src="imgs/newdragon.png" alt="" class="circle">
                </div>
                <div class="column">
                   <span class="title">
@@ -68,7 +68,7 @@
          <li class="collection-item avatar">
             <div class="row">
                <div class="column">
-                  <img src="http://materializecss.com/images/yuna.jpg" alt="" class="circle">
+                  <img src="imgs/newdragon.png" alt="" class="circle">
                </div>
                <div class="column">
                   <span class="title">
@@ -85,7 +85,7 @@
          <li class="collection-item avatar">
             <div class="row">
                <div class="column">
-                  <img src="http://materializecss.com/images/yuna.jpg" alt="" class="circle">
+                  <img src="imgs/newdragon.png" alt="" class="circle">
                </div>
                <div class="column">
                   <span class="title">
@@ -102,7 +102,7 @@
          <li class="collection-item avatar">
             <div class="row">
                <div class="column">
-                  <img src="http://materializecss.com/images/yuna.jpg" alt="" class="circle">
+                  <img src="imgs/newdragon.png" alt="" class="circle">
                </div>
                <div class="column">
                   <span class="title">
