--- a/news.html
+++ b/news.html
@@ -20,12 +20,10 @@
                     <body>
                         <ul id="registrationdropdown" class="dropdown-content">
                         <li><a style="color:black;" href="http://www.teamsideline.com/Collierville">Football Registration</a></li>
-                        <li><a style="color:black;" href="https://goo.gl/forms/z7avA6Mjw0vGUQpC3">Concession Volunteers Registration</a></li>
                      
                       </ul>
                       <ul id="registrationdropdownalt" class="dropdown-content">
                         <li><a style="color:black;" href="http://www.teamsideline.com/Collierville">Football Registration</a></li>
-                        <li><a style="color:black;" href="https://goo.gl/forms/z7avA6Mjw0vGUQpC3">Concession Volunteers Registration</a></li>
                      
                       </ul>
                       <!-- Start Webpage -->
@@ -304,6 +302,18 @@
                                                         <center style="color:#722D3C;text-shadow:-1px -1px 0 #fff,1px -1px 0 #fff,-1px 1px 0 #fff,1px 1px 0 #fff;"> Collierville Football News </center></h1>
 
 <hr class="featurette-divider">
+  <div class="row featurette ml-2">
+    <div class="col-md-12 order-md-2 "> 
+            <h4 class="featurette-heading order-md-2 pl-2">March 7th, 2019 - Kicking off a New Year with Head Coach Joe Roconni</h4><p class="lead">
+            <ul class="newsstuff ml-5">
+              <li>A Meet and Greet was held at the Collierville Football Indoor Turf Field, Head Coach Joe Roconni was welcomed to CHS and discussed the upcoming season.<br> We are excited to welcome Coach to CHS and look forward to another awesome season!.<br><br>#GoDragons
+                 </li>
+           <li>  <img src="imgs/joenew.jpg" style="max-width:400px;max-height: 200px;height:auto;width:auto;background-color: black;"></li>
+            </ul>
+           </p>
+    </div>
+  </div>
+
 
   <div class="row featurette ml-2">
     <div class="col-md-12 order-md-2 "> 
