season ticket update

--- a/seasonticket.html
+++ b/seasonticket.html
@@ -355,14 +355,14 @@
                                                   </div>
                                                   <div class="pl-4 pr-4"><h2>Hello Dragon Families!</h2><br><br><p>
  
-Another football season is just around the corner and we can't wait to see the 2018 Dragons take the field!  This contains important information on renewing and purchasing season tickets for the 2018 Collierville Dragons football season.<br><br>  
+                                                    2019 CHS Dragon Football Season Tickets and General Admission Passes Now open for purchase!<br><br>  
  
-As you know, the Dragons will be moving to our new, state-of-the-art football stadium with the completion of our new high school!  The new stadium is still in the construction phase, so the exact seating layout is not yet known.  We will do our best to seat you in the same general vicinity of where your tickets were located at the former Dragon Stadium (Herman Osteen Field).  Tickets will be $100 each this year, with on-line registration and payment through June 30th for current/renewing season ticket holders.  After June 30th, season ticket sales will be open to the general public.  Current season ticket holders will be seated first, current ticket holders with requests to change seats will be seated next, and new ticket holders will be assigned seats last.<br><br>
 
 <a href="http://www.teamsideline.com/Collierville">Dragons Season Tickets Registration and Payment Site</a><br><br>
-To view your seats from last year, please click on the below Google Document link, and indicate your seat numbers during the registration process.  If you would like to change seats, please select a seat labeled “Available”.   If you would like to change seats to an area that is currently occupied by someone else,  please reserve an “Available” seat, send me an e-mail with your request to change to that particular area, and I will do my best to accommodate your request once all renewals have been submitted.<br><br>
-<a href=" https://drive.google.com/file/d/1---aX9lsol9m18_J8mK8LcK84EqRIs43/view">2017 Dragons Seating Chart Google Document</a><br><br>
-<bold>**Seats from last year are NOT guaranteed if renewal is received after June 30th!</bold><br><br>We will also be selling general admission season passes for entrance to ALL home games for Varsity, JV, Freshmen and Middle School for $50.  If you, or anyone you know, is interested in a general admission pass.<br><br>
+When the Season Ticket screen opens you will find links at the top that will show you the seating charts.  There are 2 seating charts --one for seat back chairs and one for reserved bleacher seats.  The seat back chairs are $125 and the reserved bleachers are $75. Please indicate your first and second choice seats on the registration form. Please remember that these seats are ONLY being reserved on a first come first serve basis when payment is made online. We will do our best to seat you at, or near the seats you request.  You also have the option of purchasing general admission season passes for entrance to ALL home games for Varsity, JV, Freshmen and Middle School for $50 (excludes any potential playoff games and the jamboree).  If you have a problem with making the payment online please let us know.<br><br>
+If you have any questions or problems using the system please let us know and we will be glad to help in any way we can.  GO DRAGONS!!
+
+<br><br>
 
 Please contact me, Amy Wilhelm, at chs.dragons.tickets@gmail.com.<br><br></p>
 
