--- a/seasonticket.html
+++ b/seasonticket.html
@@ -220,7 +220,7 @@
                                     <!-- End side nav bar -->
                                     <!-- start Background image -->
                                     <section class="video-container">
-                                      <img style="margin-top:5%;"  src="imgs/schoolfront.jpg">
+                                      <img style="margin-top:5%;" src="imgs/front.jpg">
                                       </section>
                                       <!-- end background image -->
                                       <!-- MODALS FOR ALL THE COACHES -->
