--- a/index.html
+++ b/index.html
@@ -432,15 +432,14 @@
                                                               <div class="col-md-6">
                                                                   <div class="card flex-md-row mb-4 box-shadow h-md-250">
                                                                     <div class="card-body d-flex flex-column align-items-start">
-                                                                      <strong class="d-inline-block mb-2 text-primary">Collierville Football New Head Coach Meet & Greet</strong>
+                                                                      <strong class="d-inline-block mb-2 text-primary">Collierville Football Season Tickets & General Admission Passes For Sale!</strong>
                                                                       <h3 class="mb-0">
-                                                                        <a class="text-light" href="#">March 7th, 2019 @ Collierville Football Indoor Field</a>
+                                                                        <a class="text-light" href="#">Purchase Online at the Link Below!</a>
                                                                       </h3>
-                                                                      <div class="mb-1 text-sm">Join us and meet the new Coach!</div>
+                                                                      <div class="mb-1 text-sm">Need Season Tickets or to register your child to play? Signup below</div>
                                                                       <div class="row">
                                                                         <div class="col-md-12">
-                                                                          <p class="card-text mb-auto">The New Collierville Football Head Coach, Joe Roconni, will be available for a meet & greet with the Collierville Community this Thursday, March 7th at the Collierville High School Indoor Turf Field at 6 PM.<br><br> Join us for a fun-filled evening as we begin to prep for another season of #CHSFootball</p>                                                </div>
-                                                                        
+                                                                          <p class="card-text mb-auto">Can't wait for the second season in the new CHS Stadium? Don't Delay, Signup Today!<a class="btn btn-primary" href="http://www.teamsideline.com/Collierville"> Get Tickets & Register Here </a></p>                                                                         
                                                                         </div>
                                                                       </div>
                                                                     </div>
