--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
                                                                       <div class="mb-1 text-sm">Need Season Tickets or to register your child to play? Signup below</div>
                                                                       <div class="row">
                                                                         <div class="col-md-12">
-                                                                          <p class="card-text mb-auto">Can't wait for the second season in the new CHS Stadium? Don't Delay, Signup Today!<a class="btn btn-primary" href="http://www.teamsideline.com/Collierville"> Get Tickets & Register Here </a></p>                                                                         
+                                                                          <p class="card-text mb-auto">Can't wait for the second season in the new CHS Stadium? Don't Delay, Signup Today!<br><a class="btn btn-primary" href="http://www.teamsideline.com/Collierville"> Get Tickets & Register Here </a></p>                                                                         
                                                                         </div>
                                                                       </div>
                                                                     </div>
