--- a/9and10yearold.html
+++ b/9and10yearold.html
@@ -129,31 +129,24 @@
                                               </a>
                                               <ul class="right hide-on-med-and-down">
                                                 <li>
-                                                  <a href="schedule.html" target="_blank">Schedule</a>
-                                                </li>
-                                                <li>
-                                                  <a class="dropdown-button" href="#!" data-activates="registrationdropdownalt" data-beloworigin="true">Registration
-                                                    <i class="mdi-navigation-arrow-drop-down right"></i>
-                                                  </a>
-                                                </li>
-                                                 <li>
-                                                  <a href="seasonticket.html" target="_blank">Season Tickets</a>
-                                                </li>
-                                                <li>
-                                                  <a href="news.html" target="_blank">News</a>
-                                                </li>
-                                                <li>
-                                                  <a href="facilities.html" target="_blank">Facilities</a>
-                                                </li>
-                                                <li>
-                                                  <a href="sponsors.html" target="_blank">Sponsors</a>
-                                                </li>
-                                                <li>
-                                                  <a class="dropdown-button" href="#!" data-activates="dropdown" data-beloworigin="true">Teams
-                                                    <i class="mdi-navigation-arrow-drop-down right"></i>
-                                                  </a>
-                                                </li>
-                                              </ul>
+                                                 <a class="dropdown-button" href="#!" data-activates="registrationdropdownalt" data-beloworigin="true">Registration
+                                                   <i class="mdi-navigation-arrow-drop-down right"></i>
+                                                 </a>
+                                               </li>
+                                               <li>
+                                                 <a href="seasonticket.html" target="_blank">Season Tickets</a>
+                                               </li>
+                                               <li>
+                                                 <a href="news.html" target="_blank">News</a>
+                                               </li>
+                                               <li>
+                                                 <a href="facilities.html" target="_blank">Facilities</a>
+                                               </li>
+                                               <li>
+                                                 <a href="sponsors.html" target="_blank">Sponsors</a>
+                                               </li>
+                                               
+                                             </ul>
                                             </div>
                                           </div>
                                           <!-- End nav bar -->
@@ -161,9 +154,6 @@
                                           <ul class="side-nav" id="mobile-demo">
                                             <li>
                                               <a href="index.html" target="_blank">Home</a>
-                                            </li>
-                                            <li>
-                                              <a href="schedule.html" target="_blank">Schedule</a>
                                             </li>
                                             <li>
                                               <a href="news.html" target="_blank">News</a>
@@ -187,32 +177,11 @@
                                            </li>
                                              <li>
                                                   <a href="seasonticket.html" target="_blank">Season Tickets</a>
-                                                </li>
-                                            <li>
-                                              <a href="facilities.html" target="_blank">Facilities</a>
                                             </li>
                                             <li>
                                               <a href="sponsors.html" target="_blank">Sponsors</a>
                                             </li>
-                                            <li>
-                                              <a href="varsity.html" target="_blank">Varsity/JV</a>
-                                            </li>
-                                            <li>
-                                              <a href="freshman.html" target="_blank">Freshman</a>
-                                            </li>
-                                            <li>
-                                              <a href="7thand8thgrade.html" target="_blank">7th/8th Grade</a>
-                                            </li>
-                                           
-
-                                            <li>
-                                              <a href="6thgrade.html" target="_blank">6th Grade</a>
-                                            </li>
-                                            <li>
-                                              <a href="9and10yearold.html" target="_blank">9 and 10 Year Old Teams</a>
-                                            </li>
-                                          </ul>
-                                        </div>
+                                          </ul>                                        </div>
                                       </nav>
                                     </div>
                                     <!-- End side nav bar -->
