--- a/swag.html
+++ b/swag.html
@@ -99,7 +99,26 @@
          </li>
          <li class="collection-item avatar">
             <div class="row">
-               <div class="column">
+               <div class="column"><ul class="right hide-on-med-and-down">
+                                                 <li>
+                                                  <a class="dropdown-button" href="#!" data-activates="registrationdropdownalt" data-beloworigin="true">Registration
+                                                    <i class="mdi-navigation-arrow-drop-down right"></i>
+                                                  </a>
+                                                </li>
+                                                <li>
+                                                  <a href="seasonticket.html" target="_blank">Season Tickets</a>
+                                                </li>
+                                                <li>
+                                                  <a href="news.html" target="_blank">News</a>
+                                                </li>
+                                                <li>
+                                                  <a href="facilities.html" target="_blank">Facilities</a>
+                                                </li>
+                                                <li>
+                                                  <a href="sponsors.html" target="_blank">Sponsors</a>
+                                                </li>
+                                                
+                                              </ul>
                   <img src="imgs/newdragon.png" alt="" class="circle">
                </div>
                <div class="column">
@@ -130,32 +149,24 @@
                      </a>
                      <ul class="right hide-on-med-and-down">
                         <li>
-                           <a href="schedule.html" target="_blank">Schedule</a>
-                        </li>
-                        <li>
-                                                  <a class="dropdown-button" href="#!" data-activates="registrationdropdownalt" data-beloworigin="true">Registration
-                                                    <i class="mdi-navigation-arrow-drop-down right"></i>
-                                                  </a>
-                                                </li>
-                        <li>
-                           <a href="seasonticket.html" target="_blank">Season Tickets</a>
-                        </li>
-                        <li>
-                           <a href="news.html" target="_blank">News</a>
-                        </li>
-                        <li>
-                           <a href="facilities.html" target="_blank">Facilities</a>
-                        </li>
-                        <li>
-                           <a href="sponsors.html" target="_blank">Sponsors</a>
-                        </li>
-                        <li>
-                           <a class="dropdown-button" href="#!" data-activates="dropdown" data-beloworigin="true">Teams
+                         <a class="dropdown-button" href="#!" data-activates="registrationdropdownalt" data-beloworigin="true">Registration
                            <i class="mdi-navigation-arrow-drop-down right"></i>
-                           </a>
-                        </li>
-                     </ul>
-                  </div>
+                         </a>
+                       </li>
+                       <li>
+                         <a href="seasonticket.html" target="_blank">Season Tickets</a>
+                       </li>
+                       <li>
+                         <a href="news.html" target="_blank">News</a>
+                       </li>
+                       <li>
+                         <a href="facilities.html" target="_blank">Facilities</a>
+                       </li>
+                       <li>
+                         <a href="sponsors.html" target="_blank">Sponsors</a>
+                       </li>
+                       
+                     </ul>                  </div>
                </div>
                <!-- End nav bar -->
                <!-- Start side nav bar -->
