managing coaches with csv

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               </div>
               <div class="column">
                 <span class="title">
-                  <a href="7thand8thgrade.html">7th/8th Grade</a>
+                  <a href="seventhandeighthgrade.html">7th/8th Grade</a>
                 </span>
               </div>
               <div class="column">
@@ -91,11 +91,11 @@
                   </div>
                   <div class="column">
                     <span class="title">
-                      <a href="6thgrade.html">6th Grade</a>
+                      <a href="sixthgrade.html">sixth Grade</a>
                     </span>
                   </div>
                   <div class="column">
-                    <a class="secondary-content modal-trigger" href="#6thcoach">
+                    <a class="secondary-content modal-trigger" href="#sixthcoach">
                       <i class="material-icons">contact_mail</i>
                     </a>
                   </div>
@@ -108,7 +108,7 @@
                     </div>
                     <div class="column">
                       <span class="title">
-                        <a href="9and10yearold.html">9 & 10 Year Old Team</a>
+                        <a href="nineandtenyearold.html">9 & 10 Year Old Team</a>
                       </span>
                     </div>
                     <div class="column">
@@ -337,7 +337,7 @@
 						<img class="rounded-circle" src="imgs/newdragon.png" alt="Generic placeholder image" width="140" height="140">
 						<h2>The Present</h2>
 <!-- thepresent ANSIBLE MANAGED BLOCK -->
- <p> Led by Head Coach, Coach O'Neill, the Dragons are always getting prepared for the next season, constantly reminded of the standards they must uphold from the past. Checkout our facilities that make us one of the best programs in the state </p>
+ <p> Led by Head Coach, Coach Rocconi, the Dragons are always getting prepared for the next season, constantly reminded of the standards they must uphold from the past. Checkout our facilities that make us one of the best programs in the state </p>
 <!-- thepresentend ANSIBLE MANAGED BLOCK -->
 
             <p> <a class="btn btn-secondary" href="facilities.html" role="button">Varsity Football &raquo;</a>
