--- a/seasonticket.html
+++ b/seasonticket.html
@@ -72,7 +72,7 @@
               </div>
               <div class="column">
                 <span class="title">
-                  <a href="7thand8thgrade.html">7th/8th Grade</a>
+                  <a href="seventhandeighthgrade.html">7th/8th Grade</a>
                 </span>
               </div>
               <div class="column">
@@ -90,11 +90,11 @@
                   </div>
                   <div class="column">
                     <span class="title">
-                      <a href="6thgrade.html">6th Grade</a>
+                      <a href="sixthgrade.html">sixth Grade</a>
                     </span>
                   </div>
                   <div class="column">
-                    <a class="secondary-content modal-trigger" href="#6thcoach">
+                    <a class="secondary-content modal-trigger" href="#sixthcoach">
                       <i class="material-icons">contact_mail</i>
                     </a>
                   </div>
@@ -107,7 +107,7 @@
                     </div>
                     <div class="column">
                       <span class="title">
-                        <a href="9and10yearold.html">9 & 10 Year Old Team</a>
+                        <a href="nineandtenyearold.html">9 & 10 Year Old Team</a>
                       </span>
                     </div>
                     <div class="column">
