--- a/shared_components/navbar.html
+++ b/shared_components/navbar.html
@@ -8,6 +8,97 @@
   </ul>
   <!-- Start Webpage -->
   <!-- Start dropdown menu -->
+  <ul id="dropdown" class="dropdown-content collection">
+    <li class="collection-item avatar">
+      <div class="row">
+        <div class="column">
+          <img src="imgs/newdragon.png" alt="" class="circle">
+          </div>
+          <div class="column">
+            <span class="title">
+              <a href="varsity.html">Varsity/JV</a>
+            </span>
+          </div>
+          <div class="column">
+            <a class="secondary-content modal-trigger" href="#varsitycoach">
+              <i class="material-icons">contact_mail</i>
+            </a>
+          </div>
+        </div>
+      </li>
+      <li class="collection-item avatar">
+        <div class="row">
+          <div class="column">
+            <img src="imgs/newdragon.png" alt="" class="circle">
+            </div>
+            <div class="column">
+              <span class="title">
+                <a href="freshman.html">Freshman</a>
+              </span>
+            </div>
+            <div class="column">
+              <a class="secondary-content modal-trigger" href="#freshmancoach">
+                <i class="material-icons">contact_mail</i>
+              </a>
+            </div>
+          </div>
+        </li>
+        <li class="collection-item avatar">
+          <div class="row">
+            <div class="column">
+              <img src="imgs/newdragon.png" alt="" class="circle">
+              </div>
+              <div class="column">
+                <span class="title">
+                  <a href="7thand8thgrade.html">7th/8th Grade</a>
+                </span>
+              </div>
+              <div class="column">
+                <a class="secondary-content modal-trigger" href="#7th/8thcoach">
+                  <i class="material-icons">contact_mail</i>
+                </a>
+              </div>
+            </div>
+          </li>
+         
+            <li class="collection-item avatar">
+              <div class="row">
+                <div class="column">
+                  <img src="imgs/newdragon.png" alt="" class="circle">
+                  </div>
+                  <div class="column">
+                    <span class="title">
+                      <a href="6thgrade.html">6th Grade</a>
+                    </span>
+                  </div>
+                  <div class="column">
+                    <a class="secondary-content modal-trigger" href="#6thcoach">
+                      <i class="material-icons">contact_mail</i>
+                    </a>
+                  </div>
+                </div>
+              </li>
+              <li class="collection-item avatar">
+                <div class="row">
+                  <div class="column">
+                    <img src="imgs/newdragon.png" alt="" class="circle">
+                    </div>
+                    <div class="column">
+                      <span class="title">
+                        <a href="9and10yearold.html">9 & 10 Year Old Team</a>
+                      </span>
+                    </div>
+                    <div class="column">
+                      <a class="secondary-content modal-trigger" href="#youngercoach">
+                        <i class="material-icons">contact_mail</i>
+                      </a>
+                    </div>
+                  </div>
+                </li>
+              </ul>
+                                  <!-- end dropdown menu -->
+                                  <!-- Start nav bar -->
+
   <div class="navbar-fixed">
     <nav class="transparent z-depth-0">
       <div class="nav-wrapper">
@@ -51,6 +142,7 @@
               </ul>
             </div>
           </div>
+          
           <!-- End nav bar -->
           <!-- Start side nav bar -->
           <ul class="side-nav" id="mobile-demo">
