--- a/index.html
+++ b/index.html
@@ -27,27 +27,30 @@
 			</section>
 			<!-- end background image -->
 			<!-- MODALS FOR ALL THE COACHES -->
-      <div id="varsityschedule" style="overflow-y:scroll" class="modal">
+			<div id="varsityschedule" style="overflow-y:scroll" class="modal">
 				<div class="modal-content">
-					<h4>Varsity Football Schedule</h4>
-					<p>
-						<table style="color:black;">
-							<tbody>
-								<tr>
-									<th>Date</th>
-									<th>Time</th>
-									<th>Location</th>
-								</tr>
+				  <h4>Varsity Football Schedule</h4>
+				  <p><table style="color:black;">
+					<tbody>
+					  <tr>
+						<th>Date</th>
+						<th>Time</th>
+						<th>Location</th>
+					  </tr>
 
-              </tbody>
-						</table>
+
+					</tbody>
+				  </table>
 					</p>
+		  
 					</p>
+				  </div>
+				  <div class="modal-footer">
+					<a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Done</a>
+				  </div>
 				</div>
-				<div class="modal-footer"> <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Done</a>
-				</div>
-			</div>
-			<div id="varsitycoach" class="modal">
+
+<div id="varsitycoach" class="modal">
 				<div class="modal-content">
 					<h4>Head Coach: Coach O'Neill</h4>
 					<p>Email: xxx
