--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
 				  </div>
 				</div>
 
-<div id="varsitycoach" class="modal">
+
+			<div id="varsitycoach" class="modal">
 				<div class="modal-content">
 					<h4>Head Coach: Coach O'Neill</h4>
 					<p>Email: xxx
@@ -111,7 +112,6 @@
 					<h1>
                                                     <div class="spacer3">
                                                       <center style="text-shadow:-1px -1px 0 #fff,1px -1px 0 #fff,-1px 1px 0 #fff,1px 1px 0 #fff;"> Welcome to Collierville High School Football </center>
-                                                       
                                                     </h1>
 				</div>
 			</div>
@@ -147,9 +147,29 @@
 				<!-- /.row -->
 				<!-- End past, present, future -->
 				<!-- Start latest news -->
-				<div class="row mb-2">
-
+				<div class="row mb-2 rowcenter">
+						<h1 style="color:#722D3C;">
+														<div class="spacer3">
+														  <center style="text-shadow:-1px -1px 0 #fff,1px -1px 0 #fff,-1px 1px 0 #fff,1px 1px 0 #fff;"> Varsity Football Schedule </center>
+														</h1>
 				</div>
+
+				<div class="row mb-2 rowcenter">
+					<p><table style="color:black;">
+						<tbody>
+						  <tr>
+							<th>Date</th>
+							<th>Time</th>
+							<th>Location</th>
+						  </tr>
+	
+	
+						</tbody>
+					  </table>
+						</p>
+				</div>
+				<div class="row mb-2">
+</div>
 				<!-- End latest news -->
 				<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 				<script src='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js'></script>
