--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 				</div>
 
 				<div class="row mb-2 rowcenter">
-					<p><table style="color:black;">
+					<p><table style="color:black;background-color:white;">
 						<tbody>
 						  <tr>
 							<th>Date</th>
